fixed h2 alignment css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -106,6 +106,10 @@ header div a{
   grid-column: 1 / 3;
 }
 
+.wrapper h2{
+  grid-column: 1 / 4;
+}
+
 .wrapper article h3{
   color: var(--white);
   padding: 2rem;
